--- a/src/app/heroes/heroes-list/heroes.component.scss
+++ b/src/app/heroes/heroes-list/heroes.component.scss
@@ -1,35 +1,34 @@
+@use 'abstracts/mixins' as *;
 
+.heroes {
+  &__header {
+    display: flex;
+    flex-direction: column;
 
+    > :first-child {
+      margin: 1rem auto;
+    }
+  }
 
-.list-header {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 1.4rem;
-  padding: 1.5rem;
-
-  > :first-child {
-    margin: .8rem auto;
+  &__wrapper {
+    @include highContainerStyles();
+    padding-top: .8rem;
   }
 }
 
 .actions {
   display: flex;
-  justify-content: end;
-  gap: 3rem;
-  margin: 0px 4rem;
+  justify-content: space-between;
+  gap: 1rem;
 
   &__search {
     position: relative;
-    width: 40%;
+    width: 50%;
 
     label {
       display: block;
       height: 0;
       opacity: 0;
-    }
-
-    .search-box {
-
     }
 
     .search-icon {
@@ -40,6 +39,41 @@
     }
   }
 }
+
+.heroes-grid {
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 4rem;
+
+  @include respond(phone) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @include respond(tab-port) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  @include respond(big-desktop) {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+
+.search-box {
+  width: 100%;
+  padding: 10px 20px;
+  background-color: var(--bg-color-2);
+  border: 1px solid #3a3c44;
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(3.5px);
+  transition: outline 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus-visible {
+    outline: 4px solid var(--neon-blue);
+  }
+}
+
 
 .edit-link {
   position: absolute;
@@ -63,19 +97,3 @@
   }
 }
 
-.heroes-grid {
-  padding: 2rem;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-}
-
-.search-box {
-  width: 100%;
-  padding: 10px 20px;
-  // height: 100%;
-  background: rgba(143, 10, 193, 0.68);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(3.5px);
-  border: 1px solid rgba(143, 10, 193, 0.3)
-}
