--- a/src/styles/components/_divider.scss
+++ b/src/styles/components/_divider.scss
@@ -1,17 +1,18 @@
 .divider {
-  width: 100%;
-  height: 1.5px;
-  background-color: var(--border-color, #e5e7eb);
+  width: 96%;
+  height: 1.3px;
   border-radius: 9px;
-  margin: 1rem 0;
+  margin: 1rem auto;
   opacity: 0.5;
 
   &__blue {
     background-color: var(--neon-blue);
   }
+
   &__green {
     background-color: var(--neon-green);
   }
+
   &__purple {
     background-color: var(--neon-purple);
   }
