--- a/src/app/heroes/ui/hero-item/hero-item.component.scss
+++ b/src/app/heroes/ui/hero-item/hero-item.component.scss
@@ -12,8 +12,7 @@
 .card {
   border-radius: 9px;
   border: none;
-  height: 240px;
-  width: 180px;
+  min-width: 228px;
   overflow: hidden;
   box-shadow:
     0 0 2em 0 rgba(59, 130, 246, 0.4),
@@ -28,32 +27,51 @@
 
 
   &__content {
+    padding: 1rem;
     position: absolute;
     bottom: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
     width: 100%;
     z-index: 2;
     border-radius: 0 0 9px 9px;
     height: 30%;
-    justify-content: space-around;
-    padding: 5px;
-    display: flex;
-    font-size: 0.65rem;
-    color: #d9d7d7;
+    min-height: min-content;
     background: rgba(9, 48, 158, 0.48);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     text-shadow: 0px 0px .5px #000;
+    font-size: 1rem;
 
     & > * {
       display: flex;
       flex-direction: column;
-      justify-content: center;
-      gap: 3px;
+      justify-content: flex-start;
+      gap: 1px;
     }
   }
 
-  .name {
-    font-size: 0.8rem;
+  &__info {
+    .name {
+      transition: color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+    }
   }
+
+  &__stats {
+    padding-top: 0.5rem;
+    border-top: 1px solid var(--neon-purple);
+  }
+}
+
+.card-subtitle {
+  color: var(--grey);
+  font-size: 0.8rem;
+}
+
+.chip {
+  position: absolute;
+  top: 5px;
+  left: 10px;
 }
 
