--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@
   --neon-blue: #1E90FF;
   --neon-green: #6fcfbf;
   --neon-red: #ff3366;
-
+  --grey: #6B7280;
   --bg-color-2: #0e1218;
 }
 
@@ -36,3 +36,4 @@ lucide-icon {
   display: flex;
   align-items: center;
 }
+
