--- a/src/app/layout/ui/footer/footer.component.scss
+++ b/src/app/layout/ui/footer/footer.component.scss
@@ -12,6 +12,11 @@
     display: flex;
     gap: 1rem;
     justify-content: center;
+
+    a {
+      display: grid;
+      justify-items: center;
+    }
   }
 
   &__copyright {
