--- a/src/app/heroes/ui/hero-item/hero-item.component.scss
+++ b/src/app/heroes/ui/hero-item/hero-item.component.scss
@@ -22,6 +22,7 @@
     0 0 3em 0 rgba(229, 231, 235, 0.15),
     0 0 5em 0 rgba(229, 231, 235, 0.08),
     0 8px 30px rgba(0, 0, 0, 0.3);
+  color: inherit;
   z-index: 2;
   cursor: pointer;
 
