--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,7 @@
 }
 
 body {
+  font-family: 'Segoe UI',  Cantarell, sans-serif;
   font-size: 1.4rem;
   color: #fff;
   background-color: var(--page-background);
@@ -43,3 +44,20 @@ a {
   text-decoration: none;
 }
 
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #0a0a0a;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #2a2a2a;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #3a3a3a;
+}
