--- a/src/app/layout/ui/header/header.component.scss
+++ b/src/app/layout/ui/header/header.component.scss
@@ -25,7 +25,7 @@
   gap: 0.5rem;
   align-items: center;
   padding: 0.5rem 1rem;
-  background-color: var(--bg-color-2);
+  background-color: var(--bg-color);
   border: 1px solid #3a3c44;
   border-radius: 0.75rem;
 
