--- a/src/app/heroes/ui/hero-detail/hero-detail.component.scss
+++ b/src/app/heroes/ui/hero-detail/hero-detail.component.scss
@@ -2,10 +2,11 @@
 
 
 .detail {
+  margin: 0 auto;
   background: #0f0f0f;
   border-radius: 24px;
-  max-width: 50vw;
-  max-height: 70vh;
+  width: 70%;
+  height: 60vh;
   overflow-y: auto;
   position: relative;
   border: 1px solid #1a1a1a;
@@ -15,6 +16,7 @@
 
   @include respond(tab-land) {
     grid-template-columns: 1fr;
+    height: 75vh;
   }
 
   @include respond(phone) {
@@ -68,19 +70,18 @@
   width: 40px;
   height: 40px;
   border: none;
-  background: #1a1a1a;
+  background: var(--bg-color-2);
   color: #8a8a8a;
   border-radius: 50%;
   cursor: pointer;
   font-size: 1.5rem;
   display: flex;
-  align-items: center;
   justify-content: center;
   transition: all 0.3s;
   z-index: 10;
 
   &:hover {
-    background: #2a2a2a;
+    background: var(--bg-color-3);
     color: #fff;
     transform: rotate(90deg);
   }
@@ -119,7 +120,7 @@
   flex-wrap: wrap;
   gap: 8px;
 
-  .alias-tag{
+  .alias-tag {
 
   }
 }
