--- a/src/app/shared/ui/pagination/hero-pagination.component.scss
+++ b/src/app/shared/ui/pagination/hero-pagination.component.scss
@@ -46,15 +46,21 @@
   }
 
   &.arrow {
-    background: #2a2a2a;
+    display: flex;
+    justify-content: center;
+    background: var(--bg-color-3);
     color: #fff;
-    font-size: 1.6rem;
+    font-size: 1rem;
     transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover:not(:disabled) {
       background: #3a3a3a;
       box-shadow: 0 0 20px rgba(30, 144, 255, 0.2);
       border: 1px solid rgba(30, 144, 255, 0.3);
+    }
+
+    lucide-icon {
+      width: 20px;
     }
   }
 }
