--- a/src/app/heroes/ui/hero-detail/hero-detail.component.scss
+++ b/src/app/heroes/ui/hero-detail/hero-detail.component.scss
@@ -5,8 +5,8 @@
   margin: 0 auto;
   background: #0f0f0f;
   border-radius: 24px;
-  width: 70%;
-  height: 60vh;
+  width: 70vw;
+  height: 70%;
   overflow-y: auto;
   position: relative;
   border: 1px solid #1a1a1a;
