--- a/src/app/heroes/manage-hero/manage-hero.component.scss
+++ b/src/app/heroes/manage-hero/manage-hero.component.scss
@@ -139,10 +139,13 @@
   padding: 1.5rem;
   display: flex;
   justify-content: end;
-  gap: 4rem;
+  gap: 2rem;
 
   &__save, &__remove {
-    padding: 12px 16px;
+    flex: 1;
+  }
+
+  &__remove {
   }
 }
 
