--- a/src/app/heroes/ui/hero-detail/hero-detail.component.scss
+++ b/src/app/heroes/ui/hero-detail/hero-detail.component.scss
@@ -71,7 +71,7 @@
   height: 40px;
   border: none;
   background: var(--bg-color-2);
-  color: #8a8a8a;
+  color: var(--grey);
   border-radius: 50%;
   cursor: pointer;
   font-size: 1.5rem;
@@ -96,7 +96,7 @@
 }
 
 .hero-fullname {
-  color: #6b7280;
+  color: var(--grey);
   margin-bottom: 32px;
 }
 
@@ -105,8 +105,12 @@
   text-transform: uppercase;
   letter-spacing: 1.5px;
   // depending if it's good or bad
-  color: #00ff9d;
+  color: var(--green);
   font-weight: 600;
+
+  &--red {
+    color: var(--neon-red);
+  }
 }
 
 .value {
@@ -119,8 +123,4 @@
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
-
-  .alias-tag {
-
-  }
 }
