--- a/src/styles/components/_chip.scss
+++ b/src/styles/components/_chip.scss
@@ -1,5 +1,7 @@
 .chip {
-  padding: 6px 16px;
+  display: flex;
+  gap: 8px;
+  padding: 8px 16px;
   border-radius: 30px;
   color: rgb(255, 255, 255, 0.9);
   background: #1a1a1a;
