--- a/src/app/heroes/heroes-list/heroes.component.scss
+++ b/src/app/heroes/heroes-list/heroes.component.scss
@@ -29,6 +29,7 @@
   &__search {
     position: relative;
     width: 50%;
+    height: fit-content;
 
     @include respond(tab-port) {
       width: 100%;
@@ -46,32 +47,23 @@
       right: 0;
       margin-right: 30px;
       transform: translate(50%, -50%);
-
-      // @include respond(tab-land) {
-      //   right: 8%;
-      // }
     }
   }
 }
 
 .heroes-grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
   gap: 2rem;
 
-  @include respond(tab-land) {
+  @include respond-down(tab-land) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  @include respond-down(tab-port) {
     grid-template-columns: repeat(3, 1fr);
   }
 
-  @include respond(tab-port) {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  @include respond(phone) {
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  @include respond(big-desktop) {
+  @include respond-down(big-desktop) {
     grid-template-columns: repeat(5, 1fr);
   }
 }
