--- a/src/app/heroes/ui/hero-item/hero-item.component.scss
+++ b/src/app/heroes/ui/hero-item/hero-item.component.scss
@@ -1,8 +1,8 @@
 
 .item {
   position: relative;
-  width: fit-content;
   transition: transform 0.3s;
+  height: 100%;
 
   &:hover, &:focus-visible {
     transform: translateY(-25px);
@@ -12,7 +12,8 @@
 .card {
   border-radius: 9px;
   border: none;
-  // min-width: 228px;
+  height: 100%;
+  width: 100%;
   overflow: hidden;
   box-shadow:
     0 0 2em 0 rgba(59, 130, 246, 0.4),
@@ -25,7 +26,6 @@
   color: inherit;
   z-index: 2;
   cursor: pointer;
-
 
   &__content {
     padding: 1rem;
@@ -61,6 +61,10 @@
   &__stats {
     padding-top: 0.5rem;
     border-top: 1px solid var(--neon-purple);
+  }
+
+  &__image {
+    aspect-ratio: 2 / 3;
   }
 }
 
