--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -5,7 +5,7 @@ textarea {
   font: inherit;
 }
 
-input:not([type="checkbox"], [type="radio"]) {
+input:not([type="checkbox"], [type="radio"]), select {
   width: 100%;
   border-radius: 24px;
   width: 100%;
@@ -25,6 +25,25 @@ input:not([type="checkbox"], [type="radio"]) {
 
   &::placeholder {
     color: #4a4a4a;
+  }
+}
+
+select {
+  appearance: none;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%238a8a8a' d='M6 9L1 4h10z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 16px center;
+}
+
+option {
+  color: #fff;
+  background: #1a1a1a;
+  border: none;
+  width: 100%;
+
+  &:open {
+    border: 3px solid var(--green);
+    background: transparent;
   }
 }
 
